--- a/views/card.ejs
+++ b/views/card.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="css/card.css">
   </head>
-  <body onload="alert('Site not yet complete. Pardon me.')">
+  <body onload="alert('Site not yet complete. Please, pardon me.')">
     <div class="card-1 container">
       <div class="row">
       <div class="front col-sm-5">
